--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,50 +1,48 @@
-#login-dp{
-    min-width: 250px;
-    padding: 14px 14px 0;
-    overflow:hidden;
-    background-color:rgba(255,255,255,.8);
+nav{
+background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
-#login-dp .help-block{
-    font-size:12px    
+.navbar-fixed-top{
+	width: 100%;
+	color-background: black;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
-    border-top:1px solid #ddd;
-    clear:both;
-    padding:14px;
+.navbar-header{
+	padding-top: 8px;
 }
-#login-dp .social-buttons{
-    margin:12px 0    
+.navbar-nav{
+	margin: 5px;
 }
-#login-dp .social-buttons a{
-    width: 49%;
+.navbar-brand{
+	color: white;
+	font-style: bold;
+	font-size: 1.5em;
 }
-#login-dp .form-group {
-    margin-bottom: 10px;
+.light{
+	color: white;
+	font-style: bold;
 }
-.btn-fb{
-    color: #fff;
-    background-color:#3b5998;
+.navbar-collapse{
+	margin-right: 50px;
 }
-.btn-fb:hover{
-    color: #fff;
-    background-color:#496ebc 
-}
-.btn-tw{
-    color: #fff;
-    background-color:#55acee;
-}
-.btn-tw:hover{
-    color: #fff;
-    background-color:#59b5fa;
-}
-@media(max-width:768px){
-    #login-dp{
-        background-color: inherit;
-        color: #fff;
-    }
-    #login-dp .bottom{
-        background-color: inherit;
-        border-top:0 none;
-    }
+
+/////////////////////////////
+//button-5 
+///////////////////////////
+.btn-5 {
+  border: 0 solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, .5);
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+} 
+
+.btn-5:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
+  text-shadow: 1px 1px 2px #427388; 
 }
